syntax = "proto3";
package poset;
import "event.proto";
import "github.com/Fantom-foundation/go-lachesis/src/peers/peer.proto";

message BlockBody {
  int64 Index = 1;
  int64 RoundReceived = 2;
  repeated bytes Transactions = 5;
  repeated InternalTransaction InternalTransactions = 6;
  peers.PeerSet PeerSet = 7;
}

message WireBlockSignature {
  int64 Index = 1;
  string Signature = 2;
}

message Block {
  BlockBody Body = 1;
  map<string, string> Signatures = 2;
  bytes hash = 3;
  string hex = 4;
  bytes StateHash = 5;
  bytes FrameHash = 6;
}
